
20070518: Applied patch #1711714 - show Buy/Sell objects in the data panel when cursor hovers over the object. - thanks to xley for the patch.

20070519: Applied patch #1716890 - automated help docs for indicators - thanks to xley for the patch.

20070523: Applied part patch #1716538 - misc/CUS_examples/Contributions/lvgandhi/Ray* for Elder Ray Bull Power and Ray Bear Power - thanks to lvgandhi for the patch.

20070523: Applied part patch #1716538 - misc/CUS_examples/Contributions/lvgandhi/FIMAs for Force Index with MAs - thanks to lvgandhi for the patch.

20070524: Applied part patch #1716538 - misc/CUS_examples/Contributions/ravisghosh/Envelope - thanks to ravisghosh for the patch.

20070524: misc/CUS_examples/Contributions/xley/star - Demonstrate detection of various different star candle patterns. Remember with three-day patterns, that the highlight refers to the previous day. - thanks to xley for the patch.

20070525: Improved docs/index.html (and hence qtstalker.sf.net) with deliberately basic CSS. - thanks to xley for the patch.

20070525: misc/CUS_examples/Contributions/xley/kk - Indicator (kk) and Scanner
(s-kk) example for detecting Piercing Line (Kirikomi) and Dark Cloud Cover
(Kabuse) candles. Also has documentation. - thanks to xley for the patch.

20070529: FI indicator now properly handles "maType" and "smoothing" when used via CUS. Fixes bug #1716543. - thanks to xley for the patch.

20070531: Improved docs/quick.html to better explain the quickstart steps and to use current terminology.

20070601: Fixed saving of some user preferences, e.g. "Bar Spacing" and "Navigator panel" position. Users of CVS trunk need to visit "Edit=>Edit Preferences" and set each of the three "Bar spacing" to a different value. This causes the configuration file to be re-written as integers. Fixes bug #1729273 #1729276. - thanks to xley for the patch.

20070605: Explained how to search/edit settings when developing. See docs/dev.html - thanks to xley for the patch.