@@ -1,0 +1,23 @@
+<html>
+  <head>
+    <title>Indicator: cdl-vol: Volume Candles</title>
+  </head>
+  <body>
+    <h1>Indicator: cdl-vol: Volume Candles</h1>
+    <p>
+      Candles are coloured according to the ratio of the volume to the
+      20 bar SMA of volume.
+    </p>
+    <pre>
+   less than 1.0  murk
+       1.0 - 1.1  darkRed
+       1.1 - 1.2  red
+       1.2 - 1.3  orange
+       1.3 - 1.6  yellow
+greater than 1.6  white
+    </pre>
+    <p>
+      Back to <a href="intro.html">introduction</a>.
+    </p>
+  </body>
+</html>
